--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,19 +6,23 @@ body {
   display: grid;
   grid-template-columns: auto 300px;
   grid-template-rows: 100px auto;
+  gap: 10px;
 }
 
 .map {
+  border: deeppink 5px dashed;
   grid-column: 1 / span 1;
   grid-row: 1 / span 2;
 }
 
 .tickets {
+  border: deeppink 5px dashed;
   grid-column: 2 / span 1;
   grid-row: 2 / span 1;
 }
 
 .player-info {
+  border: deeppink 5px dashed;
   grid-column: 2 / span 1;
   grid-row: 1 / span 1;
 }
