--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,6 +10,8 @@ body {
 }
 
 .map {
+  margin-left: auto;
+  margin-right: 0;
   border: deeppink 5px dashed;
   grid-column: 1 / span 1;
   grid-row: 1 / span 2;
