--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,8 +4,8 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: auto 300px;
-  grid-template-rows: 300px 300px auto;
+  grid-template-columns: auto 300px auto;
+  grid-template-rows: 500px 200px auto;
   gap: 10px;
 }
 
